--- a/.github/workflows/automated.yml
+++ b/.github/workflows/automated.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: [ main ]
 #   一天运行两次
-#  schedule:
-#      - cron: '25 */12 * * *'
+  schedule:
+      - cron: '25 */12 * * *'
 
 jobs:
   build:
