--- a/.github/workflows/automated.yml
+++ b/.github/workflows/automated.yml
@@ -56,6 +56,6 @@ jobs:
 
     - name: v2rss push
       run: |
-        git add --all
+        git add .
         git commit -m "Automated deployment @ $(date '+%Y-%m-%d %H:%M:%S') ${{ env.TZ }}"
-        git push -f origin main
+        git push -u origin main
