--- a/.github/workflows/automated.yml
+++ b/.github/workflows/automated.yml
@@ -1,8 +1,8 @@
 name: V2RSS Mining
 
 on:
-  push:
-    branches: [ main ]
+#   push:
+#     branches: [ main ]
   #   一天运行两次
   schedule:
     - cron: '25 */12 * * *'
