--- a/.github/workflows/automated.yml
+++ b/.github/workflows/automated.yml
@@ -2,59 +2,53 @@ name: V2RSS Mining
 
 on:
   push:
-     branches: [ main ]
+    branches:
+      - "main"
+    paths:
+      - "src/**"
   #   一天运行两次
   schedule:
     - cron: '25 */12 * * *'
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     env:
       TZ: "Asia/Shanghai"
-
     steps:
       # ============================================
       # TODO [√] 检查工作分支及 Workflows 运行环境
       # ============================================
       - uses: actions/checkout@v2
-
       # ============================================
       # TODO [√] 创建 Python3.6+ 编译环境
       # ============================================
-      - name: Set up Python 3.8
+      - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: 3.9
       # ============================================
       # TODO [√] 安装 Project 第三方依赖
       # ============================================
-      # 拉取 requirement
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      # 1. 拉取最新版 Chrome 并适配对应版本的 ChromeDriver
-      # 2. 初始化工作目录
-      - name: v2rss build
+      - name: Scaffold Install
         run: |
-          python build.py
+          cd src && python main.py install
       # ============================================
       # TODO [√] 测试 Scaffold 脚手架指令
       # ============================================
-
-      - name: v2rss mining
+      - name: Scafflod Mining
         run: |
           python main.py mining --env=production --collector --classifier --source=local
-
       # ============================================
       # TODO [√] 更新仓库数据
       # ============================================
       - name: Setup GIT user
         uses: fregante/setup-git-user@v1
-
-      - name: v2rss push
+      - name: Push
         run: |
           git add .
           git commit -m "Automated deployment @ $(date '+%Y-%m-%d %H:%M:%S') ${{ env.TZ }}"
