--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
-pytz>=2021.3
+# {{< Scaffolding dependency >}}
+fire>=0.4.0
+
+# {{< Log system >}}
 loguru>=0.5.3
+
+# {{< Interface /Data cleaning >}}
+requests>=2.26.0
+beautifulsoup4>=4.10.0
+cloudscraper>=1.2.58
+bs4>=0.0.1
+
+# {{< Drive >}}
 selenium>=4.1.0
 gevent>=21.8.0
 tqdm>=4.62.3
-requests>=2.26.0
-bs4>=0.0.1
-beautifulsoup4>=4.10.0
-cloudscraper>=1.2.58
-fire>=0.4.0
+pytz>=2021.3
