--- a/.github/workflows/automated.yml
+++ b/.github/workflows/automated.yml
@@ -4,9 +4,12 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - "main"
-    paths:
-      - "src/**"
+      - main
+    paths-ignore:
+      - ".github/**"
+      - "README.md"
+      - "LICENSE"
+      - ".gitignore"
   #   一天运行两次
   schedule:
     - cron: '25 */12 * * *'
@@ -33,6 +36,7 @@ jobs:
       # ============================================
       - name: Install dependencies
         run: |
+          sudo apt install -y ffmpeg
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Scaffold Install
